# spectraldiag

./: .gitignore  CMakeLists.txt  FIX_INSTRUCTIONS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
python/spectraldiag/: __init__.py  callbacks.py  graph_lap.py
src/: pymodule.cpp
src/spectraldiag/: alignment.hpp  api.hpp  diagnostics.hpp  spectral.hpp
tests/: test_core.py
